--- a/shop/templates/shop/c_order_form.html
+++ b/shop/templates/shop/c_order_form.html
@@ -23,10 +23,12 @@
 
 <div class="container pt-2">
 
-        <h1> Foglalok a : {{ware.c_make_date}}-i </h1>
-        <h2> {{ware.id}} {{ware.c_make_ware.ware_type.ware_brand}} 
-            {{ware.c_make_ware.ware_type.ware_brand_name}} kávéra</h2>
+        <h1> Foglalok a : {{coffee_1.c_make_date}}-i </h1>
+        <h2> {{coffee_1.id}} {{coffee_1.c_make_ware.ware_type.ware_brand}} 
+            {{coffee_1.c_make_ware.ware_type.ware_brand_name}} kávéra</h2>
         <h4>{{dose}}</h4>
+        <h4>{{ware}}</h4>
+        <h4>('coffee_dose','sugar_dose', 'milk_dose','flavour_dose')  </h4>
 </div>
 
 
@@ -36,7 +38,10 @@
         
         <h4></h4>
         
-        <h4>{{form.as_p}}</h4>
+        <h4>{{form.coffee_dose.label}} {{form.coffee_dose}}</h4>
+        <h4>{{form.sugar_dose.label}}{{form.sugar_dose}}</h4>
+        <h4>{{form.milk_dose.label}}{{form.milk_dose}}</h4>
+        <h4>{{form.flavour_dose.label}}{{form.flavour_dose}}</h4>
         
 
         <button type="cancel" class="cancel btn btn-primary" onclick="window.history.back();">Cancel</button>
