--- a/shop/templates/shop/coffee_order.html
+++ b/shop/templates/shop/coffee_order.html
@@ -24,18 +24,14 @@
 
 <div class="container sm ">
     <div class="row-sm-2">
-        <div class="col-sm-2 right border">
+        <div class="col-sm-2 right">
             <a  {% if user.is_authenticated %} href="{% url 'shop:coffee_home' %}" {% endif %}>                
                 <img src ="{% static '/image/koffe.jpeg' %}" class="rounded" 
                 style="width:100px;height:100px; border:5px solid; "; alt="choice">                 
             </a>
         </div>
-        <div class="col-sm-6 right border">
-            <h1> Következő Kávézás</h1>
-            <h3>End {{dt_end}}</h3>            
-            <h3>adat {{adat}}</h3>
-            <h3>ordered {{ordered}}</h3>
-            <h4>del {{coffee1}}:</h4>
+        <div class="col-sm-6 right">
+            <h1> Következő Kávézás: </h1>
         </div>    
     </div>
 </div>
@@ -43,7 +39,7 @@
 <div class="container sm ">
     {% for coffee in coffees %}
     <div class="row-sm-6">
-        <table class="table table table-hover border">
+        <table class="table table table-hover">
             <thead class="table-dark">
                 <tr>  
                     <th class="col-sm-2">{{coffee.id}}, 
@@ -91,6 +87,9 @@
     </div>
     {% endfor %}
 </div>
-
+<br><br><br><br><br>
+<p>
+    This was the last point when I can not use JawaScript 2022.05.30
+</p>
      
 {% endblock%}
