--- a/templates/home.html
+++ b/templates/home.html
@@ -17,7 +17,9 @@
 {% endblock %}
 {% block content %}
 <h1> THIS SITE UNDER CONSTRUCTION</h1>
-<h4> THIS SITE IS A DJANGO TUTORIAL (and GIT)</h4>
+<h4> THIS SITE IS A DJANGO TUTORIAL (and GIT :-)</h4>
+<p> The main principle failed. I wanted a pure django creation without jawascript. 
+    <br> But ... </p>
 <p> staff login:    the.boss@staff.com</p>
 <p>password:    Enter1</p>
 
