Squashed commit of the following:
commit 288e1c0fbb3fe95635dd4abf0bf3ed4a3a2e723e
Merge: ff767c9 7c9a1e3
Author: Jupieter <63549139+Jupieter@users.noreply.github.com>
Date:   Wed Jun 1 13:28:51 2022 +0200

    Merge branch 'main'

commit ff767c95cd482b65824476222613ba913d0cb41f
Author: Peter Jung <63549139+Jupieter@users.noreply.github.com>
Date:   Wed Jun 1 13:21:18 2022 +0200

    Delete data file

commit 28b02c563aa5155bb7e2f62eb6796997b2f3d381
Author: Jupieter <63549139+Jupieter@users.noreply.github.com>
Date:   Tue May 31 14:26:16 2022 +0200

    gitignor

commit 0813551001e7a7d66cfa9f7b7972c93c712445e5
Author: Jupieter <63549139+Jupieter@users.noreply.github.com>
Date:   Tue May 31 14:18:27 2022 +0200

    Go the DB

commit dfd7743a9f27facdd8e3d4ca61f411baa5eb3d9f
Author: Jupieter <63549139+Jupieter@users.noreply.github.com>
Date:   Tue May 31 14:13:51 2022 +0200

    Go the DB

commit e1917f4dd5fa24e34bec8833b29238328d2050e3
Author: Jupieter <63549139+Jupieter@users.noreply.github.com>
Date:   Tue May 31 13:57:22 2022 +0200

    Open source staff

commit e0b7df108654cdeee6f7fb4299bf7e429b3f3b31
Author: Jupieter <63549139+Jupieter@users.noreply.github.com>
Date:   Tue May 31 13:52:57 2022 +0200

    Same design and comment

commit 32b95a35be4ed0941e64a548dff82d4589bf34c6
Author: Jupieter <63549139+Jupieter@users.noreply.github.com>
Date:   Mon May 30 22:09:05 2022 +0200

    js file input range show value

commit 67b56d2136fe18288f69672f596466f98e4bda30
Author: Jupieter <63549139+Jupieter@users.noreply.github.com>
Date:   Mon May 30 22:06:52 2022 +0200

    form input range show value

commit 40c373bae0382c136e085d09db50b8f86afc21c9
Author: Jupieter <63549139+Jupieter@users.noreply.github.com>
Date:   Sat May 28 22:20:24 2022 +0200

    late night

commit 9104d5cf06982d581e069123805147eabe60e513
Author: Jupieter <63549139+Jupieter@users.noreply.github.com>
Date:   Sat May 28 20:12:16 2022 +0200

    acqisition list red sign if low stock

commit 8e9782b22723696

--- a/shop/templates/shop/coffee_home.html
+++ b/shop/templates/shop/coffee_home.html
@@ -23,7 +23,7 @@
 
 <div class="container pt-2 middle border">
     <div class="col-sm-6 right border">
-        <h2> Kávé adatlaplap </h2>
+        <h1> Kávé adatlaplap </h1>
         <h4>{{wares}}</h4>
     </div>    
 </div>
@@ -37,7 +37,7 @@
             </a>
         </div>
         <div class="col-sm-3 right border">
-            <a  {% if user.is_authenticated %} href="{% url 'shop:coffee_make' %}" {% endif %}>                
+            <a  {% if user.is_authenticated %} href="{% url 'shop:coffee_order' %}" {% endif %}>                
                 <img src ="{% static '/image/koffe.jpeg' %}" class="rounded" 
                 style="width:200px;height:200px; border:5px solid; "; alt="choice">                 
             </a>
