sorting open products

--- a/shop/templates/shop/c_order_form.html
+++ b/shop/templates/shop/c_order_form.html
@@ -27,6 +27,10 @@
         <h2>{{coffee_1.c_make_ware.ware_type.ware_brand}} 
             {{coffee_1.c_make_ware.ware_type.ware_brand_name}} kávéra</h2>
         <h4>Már csak {{dose}} adag kávé maradt</h4>
+        <p>ware_type_list: {{wares}}</p>
+        <p>sugar: {{sugar}}</p>
+        <p>milk: {{milk}}</p>
+        <p>falvour: {{falvour}}</p>
 
 </div>
 
