Choice to milk and flavour

--- a/shop/templates/shop/c_order_form.html
+++ b/shop/templates/shop/c_order_form.html
@@ -68,6 +68,9 @@
             <div class="col-sm-3 right border" oninput="re_fresh('milkRange','milkLabel')">
                 {{form.milk_dose}}
             </div>        
+            <div class="col-sm-6 right border" >
+                {{form.milk_choice}}
+            </div>
         </div>
         
         <div class="form-row border">
@@ -76,6 +79,9 @@
             </div>
             <div class="col-sm-3 right border" oninput="re_fresh('flavourRange','flavourLabel')">
                 {{form.flavour_dose}}
+            </div>
+            <div class="col-sm-6 right border" >
+                {{form.flavour_choice}}
             </div>           
         </div>
             
