--- a/shop/templates/shop/c_order_form.html
+++ b/shop/templates/shop/c_order_form.html
@@ -86,7 +86,7 @@
         </div>
             
         <button type="cancel" class="cancel btn btn-primary" onclick="window.history.back();">Cancel</button>
-        {% if user.is_staff %}
+        {% if user.is_authenticated %}
             <button type="submit" class="save btn btn-primary">Save</button>
         {% endif %}
         
