--- a/shop/templates/shop/c_order_form.html
+++ b/shop/templates/shop/c_order_form.html
@@ -40,7 +40,7 @@
     
     <form id="usersForm" method="POST" class="form-inline"> {% csrf_token %}   
         <h4></h4>
-        <div class="form-row border">
+        <div class="row border">
             <div  class="col-sm-3 right border"> {{form.coffee_dose.label}}
                 Választás: <span id="coffeeLabel">0</span>
             </div>
@@ -49,7 +49,7 @@
             </div>            
         </div>
 
-        <div class="form-row border">
+        <div class="row border">
             <div class="col-sm-3 right border" > {{form.sugar_dose.label}} 
                 Választás: <span id='sugarLabel'>0</span>
             </div>
@@ -61,7 +61,7 @@
             </div>
         </div>
 
-        <div class="form-row border">
+        <div class="row border">
             <div class="col-sm-3 right border"> {{form.milk_dose.label}}
                 Választás: <span id="milkLabel">0</span>
             </div> 
@@ -73,7 +73,7 @@
             </div>
         </div>
         
-        <div class="form-row border">
+        <div class="row border">
             <div class="col-sm-3 right border"> {{form.flavour_dose.label}}
                 Választás: <span id="flavourLabel">0</span>
             </div>
