--- a/shop/templates/shop/c_order_form_copy.html
+++ b/shop/templates/shop/c_order_form_copy.html
@@ -32,6 +32,10 @@
         <p>falvour : {{falvour_s}}</p>
         <p>coffee2.sugar_dose : {{coffee2.sugar_dose}}</p>
         <p>coffee2.sugar_choice.pk : {{coffee2.sugar_choice.pk}}</p>
+        <p>coffee2.milk_dose : {{coffee2.milk_dose}}</p>
+        <p>coffee2.milk_choice.pk : {{coffee2.milk_choice.pk}}</p>
+        <p>coffee2.flavour_dose : {{coffee2.flavour_dose}}</p>
+        <p>coffee2.flavour_choice.pk : {{coffee2.flavour_choice.pk}}</p>
         <p>proba{{proba}}</p>
 
 </div>
