the main page text to contact page

--- a/shop/templates/shop/c_order_form.html
+++ b/shop/templates/shop/c_order_form.html
@@ -28,10 +28,9 @@
             {{coffee_1.c_make_ware.ware_type.ware_brand_name}} kávéra</h2>
         <h4>Már csak {{dose}} adag kávé maradt</h4>
         <br>
-        <p>sugar: {{sugar}}{{sugar_s}}</p>
-        <p>milk: {{milk_s}}</p>
-        <p>falvour: {{falvour_s}}</p>
-        <p>cf2 {{coffee2.sugar_dose}}</p>
+        <p>sugar: {{sugar}} {{sugar_s}}</p>
+        <p>milk: {{milk}} {{milk_s}}</p>
+        <p>falvour: {{falvour}} {{falvour_s}}</p>
         <p>proba{{proba}}</p>
 
 </div>
