--- a/templates/home.html
+++ b/templates/home.html
@@ -16,11 +16,11 @@
     </style>
 {% endblock %}
 {% block content %}
-<h1> THIS SITE UNDER CONSTRUCTION</h1>
+<h1>Főoldal</h1>
+<h2> THIS SITE UNDER CONSTRUCTION</h2>
 <h4> THIS SITE IS A DJANGO TUTORIAL (and GIT :-)</h4>
-<p> The main principle failed. I wanted a pure django creation without jawascript. 
-    <br> But ... </p>
-<p> staff login:    the.boss@staff.com</p>
-<p>password:    Enter1</p>
+
+<h6> staff login:    the.boss@staff.com</h6>
+<h6>password:    Enter1</h6>
 
 {% endblock %}
