next 24h coffes on main page

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -9,6 +9,7 @@
       background-repeat: no-repeat;
       background-attachment: fixed;
       background-size: 100% 100%;
+      color: rgb(178, 169, 155);
     }
 </style>
 
