--- a/shop/templates/shop/coffee_make.html
+++ b/shop/templates/shop/coffee_make.html
@@ -21,16 +21,16 @@
 {% endblock %}  
 
 {% block content %}
-
 <div class="container sm ">
+    <br>
     <div class="row-sm-2">
-        <div class="col-sm-2 right border">
-            <a  {% if user.is_authenticated %} href="{% url 'shop:coffee_home' %}" {% endif %}>                
+        <div class="col-sm-2 right">
+            <a  {% if user.is_authenticated %} href="/" {% endif %}>                
                 <img src ="{% static '/image/coffee_machine_1.jfif' %}" class="rounded" 
                 style="width:100px;height:100px; border:5px solid; "; alt="choice">                 
             </a>
         </div>
-        <div class="col-sm-6 right border">
+        <div class="col-sm-6 right">
             <h1> Kávé főzés {{dt}} </h1>
             <h4> Kibontott kávék</h4>
         </div>    
