--- a/templates/home.html
+++ b/templates/home.html
@@ -26,33 +26,62 @@
 <h6> staff login:    the.boss@staff.com</h6>
 <h6>password:    Enter1</h6>
 
-<div class="row border">
-    <div class="col-md-4 border centered">
+<div class="row ">
+    <div class="col-md-4 centered">
         <center>
             <h4> Next Coffee:</h4>
-             <a href="{% url 'shop:coffee_order' %}">
-            <img src='/static/image/coffe_draw.webp' 
+            <a href="{% url 'shop:coffee_order' %}">
+                <img src='/static/image/koffe.jpeg'
             style="width: 150px; height:150px; 
-            padding: px; background-color:white;">
+            padding: 1px; background-color:white;">
             </a>
-            <p>If you want to book a few servings of coffee, click on the cup picture.</p>
         </center>
     </div>
 </div>
 
 {% for coffee in coffees %}
-    <div class="row border">
-        <div class="col-md-4 border centered">
-            <div class="card bg-brown text-white">
-                <h3 class="card-title text-center">
+<div class="row ">
+    <div class="col-md-4 centered p-1">
+        <div class="card bg-brown text-white">
+            <h3 class="card-title text-center">
                 <div class="d-flex flex-wrap justify-content-center mt-2">
                     <a><span class="badge hours">{{coffee.c_make_date}}</span></a> 
                 </div>
-                </h3>
-            </div>
+            </h3>
         </div>
     </div>
+</div>
 {% endfor %}
+<p>If you want to book a few servings of coffee, click on the cup picture.</p>
+
+{% if user.is_authenticated %}
+<div class="row border">
+    <div class="col-md-4 centered">
+        <center>
+            <h4> Make Coffee:</h4>
+            <a href="{% url 'shop:coffee_make' %}">
+                <img src='/static/image/coffee_machine_1.jfif'
+                style="width: 150px; height:150px; 
+            padding: px; background-color:white;">
+            </a>
+            <p></p>
+        </center>
+    </div>
+</div>
+<div class="row border">
+    <div class="col-md-4 centered">
+        <center>
+            <h4> Make Booking:</h4>
+            <a href="{% url 'shop:coffee_make' %}">
+                <img src='/static/image/coffe_book_1.png'
+                style="width: 150px; height:150px; 
+            padding: px; background-color:white;">
+            </a>
+            <p></p>
+        </center>
+    </div>
+</div>
+{% endif %}
 
 
 
