new link to booking

--- a/shop/templates/shop/coffee_booking.html
+++ b/shop/templates/shop/coffee_booking.html
@@ -26,7 +26,7 @@
     <div class="row-sm-2">
         <div class="col-sm-2 right">
             <a  {% if user.is_authenticated %} href="{% url 'shop:coffee_home' %}" {% endif %}>                
-                <img src ="{% static '/image/koffe.jpeg' %}" class="rounded" 
+                <img src ="{% static '/image/coffe_book_1.png' %}" class="rounded" 
                 style="width:100px;height:100px; border:5px solid; "; alt="choice">                 
             </a>
         </div>
