--- a/shop/templates/shop/coffee_make.html
+++ b/shop/templates/shop/coffee_make.html
@@ -25,7 +25,7 @@
     <br>
     <div class="row-sm-2">
         <div class="col-sm-2 right">
-            <a  {% if user.is_authenticated %} href="/" {% endif %}>                
+            <a  {% if user.is_authenticated %} href="{% url 'shop:coffee_home' %}" {% endif %}>                
                 <img src ="{% static '/image/coffee_machine_1.jfif' %}" class="rounded" 
                 style="width:100px;height:100px; border:5px solid; "; alt="choice">                 
             </a>
