--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -43,6 +43,7 @@
           <div class="dropdown-divider"></div>
             {% if user.is_staff %}
               <a class="dropdown-item" href="{% url 'shop:coffee_make' %}">Főzés</a>
+              <a class="dropdown-item" href="{% url 'shop:coffee_booking' %}">Könyvelés</a>
             {% endif %}
           <a class="dropdown-item" href="{% url 'shop:coffee_order' %}">Rendelés</a>
         </div>
