--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -30,7 +30,7 @@
               <a class="dropdown-item" href="{% url 'raw_material:acquisition_list' %}">Raktár</a>
             {% endif %}
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="{% url 'raw_material:ware_choice' %}">Áruk</a>
+          <a class="dropdown-item" href="{% url 'raw_material:ware_choice' %}">Áruk beszerzése</a>
         </div>
       </li>
       
