--- a/shop/templates/shop/c_order_form.html
+++ b/shop/templates/shop/c_order_form.html
@@ -23,9 +23,9 @@
 
 <div class="container pt-2">
 
-        <h1> Foglalok a : {{coffee_1.c_make_date}}-i </h1>
-        <h2>{{coffee_1.c_make_ware.ware_type.ware_brand}} 
-            {{coffee_1.c_make_ware.ware_type.ware_brand_name}} kávéra</h2>
+        <h1> Foglalok a :{{coffee_1.c_make_date}}-i </h1>
+        <h2>{{coffee_1.c_make_ware.ware_type.ware_brand}}
+            {{coffee_1.c_make_ware.ware_type.ware_brand_name}} kávéra  ({{coffee_1.id}}) </h2>
         <h4>Már csak {{dose}} adag kávé maradt</h4>
         <br>
         <p>sugar: {{sugar}} {{sugar_s}}</p>
